# storyteller

./: ---.md  .env.example  .gitignore  Biolichter_Geheimnisse_unter_Helgolands_Wellen.md  CLAUDE.md  Das_Geheimnis_der_Roten_Tür.md  Der_dissonante_Choral_Ein_Lüneburger_Musik-Krimi.md  Der_dissonante_Choral_Ein_Lüneburger_Musik-Krimi_info.md  Die_verschwundene_Sprache_Hamburgs_verlorene_Worte.md  README.md  README_AUDIO.md  Vergessene_Minuten_Ein_Hamburg-Krimi.md  Verlorene_Minuten_Schatten_über_Hamburg.md  WG_der_verlorenen_Spezies.md  Zwilling_im_Nebel_Wenn_die_Cloud_dich_verrät.md  claude.md  clean_history.sh  cleanup_summary.md  code_usage_summary.md  concept.md  example_audiobook_workflow.sh  extract_story.py  felix_fummel.txt  fix_ssml_prosody.py  fix_summary.md  flake.nix  flow.md  generate_audiobook.py  guidance.md  knowledge_tracking_artifacts.md  langgraph.md  langmem.md  memory_system.md  migrate_to_v2.py  pyproject.toml  refactoring_summary.md  regenerate_ssml_with_titles.py  remove_secrets.sh  repair_audio.py  requirements.txt  (+18 more)
docs/: audiobook_generation.md  worldbuilding.md  worldbuilding_diagram.md
storyteller_lib/: __init__.py  adaptive_character_tracking.py  azure_tts.py  book_statistics.py  chapter_correction.py  chapter_variety.py  character_arcs.py  character_creation.py  character_knowledge_manager.py  config.py  config_models.py  consistency.py  constants.py  context_aware_scene_analysis.py  creative_tools.py  database_integration.py  dialogue.py  dramatic_arc.py  entity_relevance.py  exceptions.py  exposition.py  graph.py  graph_v2.py  graph_with_db.py  initialization.py  instruction_synthesis.py  integration.py  intelligent_repetition.py  logger.py  manuscript_review.py  memory_adapter.py  memory_manager.py  minor_corrections.py  models.py  narrative_structures.py  outline.py  pacing.py  plot_threads.py  progress_manager.py  progression.py  (+35 more)
storyteller_lib/analysis/: consistency.py  dialogue.py  exposition.py  pacing.py  repetition.py  statistics.py  (+1 more)
(+385 files in other folders)
